<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_item"
    android:layout_width="170dp"
    android:layout_height="296dp"
    android:layout_marginTop="11dp"
    android:background="@drawable/background"
    android:clipChildren="true">

    <ImageView
        android:id="@+id/iv_movie_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/movie_list"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_age"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:background="@color/background"
        android:gravity="center"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tag"
        android:layout_width="343dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="214dp"
        android:gravity="center_vertical"
        android:text="@string/tag"
        android:textColor="@color/tag"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewStar1"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewStar4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/imageViewStar2"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewStar1"
        app:layout_constraintStart_toEndOf="@+id/imageViewStar1"
        app:layout_constraintTop_toTopOf="@+id/imageViewStar1"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/imageViewStar3"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewStar1"
        app:layout_constraintStart_toEndOf="@+id/imageViewStar2"
        app:layout_constraintTop_toTopOf="@+id/imageViewStar1"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/imageViewStar4"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewStar1"
        app:layout_constraintStart_toEndOf="@+id/imageViewStar3"
        app:layout_constraintTop_toTopOf="@+id/imageViewStar1"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/imageViewStar5"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewStar1"
        app:layout_constraintStart_toEndOf="@+id/imageViewStar4"
        app:layout_constraintTop_toTopOf="@+id/imageViewStar1"
        app:srcCompat="@drawable/star_icon1" />

    <TextView
        android:id="@+id/textViewReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/reviews"
        android:textColor="@color/reviews"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewStar1"
        app:layout_constraintStart_toEndOf="@+id/imageViewStar5"
        app:layout_constraintTop_toTopOf="@+id/imageViewStar1" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/name_list"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_list" />


    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/_137_min"
        android:textColor="@color/reviews"
        android:layout_marginBottom="8dp"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />


</androidx.constraintlayout.widget.ConstraintLayout>
